clean up onBuilt

--- a/document.tex
+++ b/document.tex
@@ -34,7 +34,7 @@
 
 \section*{Introduction}
 
-Write some stuff\ldots
+Write some stuff\ldots poop
 
 %% Bibliography - this is compiled from bib.bib
 \pagebreak
