--- a/document.tex
+++ b/document.tex
@@ -8,7 +8,7 @@
     \normalsize{Lewis Wolstanholme}             % author
 }
 \date{
-    2021                                        % date
+    \getDate\today                              % date
 }
 
 % JOURNAL PREAMBLE
