--- a/master.tex
+++ b/master.tex
@@ -1,6 +1,8 @@
 \documentclass[a4paper, 11pt]{article}
 % \documentclass[a4paper, 11pt]{journal}  
 
+% spell-checker: disable
+% spellchecker: disable
 \usepackage[top=2cm, bottom=2cm, left=2cm, right=2cm]{geometry}
 \usepackage{amssymb}                    % maths
 \usepackage{mathtools}                  % maths
