--- a/document.tex
+++ b/document.tex
@@ -18,18 +18,17 @@
 %     \LaTeX~Template                             % title
 % }
 % \subtitle{
-%     \textit{for all the things}                 % subtitle
+%     \textit{\getDate\today}                     % subtitle
 %     \vspace{-16px}
 % }
 % \author{
 %     \normalsize{Lewis Wolstanholme}             % AUTHOR
 % }
 
-
 \maketitle
 
 % \begin{abstract}
-%     abstract\ldots
+%     \ldots
 % \end{abstract}
 
 \section*{Introduction}
