--- a/master.tex
+++ b/master.tex
@@ -6,7 +6,7 @@
 \usepackage[top=2cm, bottom=2cm, left=2cm, right=2cm]{geometry}
 \usepackage{amssymb}                    % maths
 \usepackage{mathtools}                  % maths
-\usepackage[none]{hyphenat}             % deals with unnecessary word breaks
+\usepackage[none]{hyphenat}             % less word breaks more kerning
 \usepackage[hidelinks]{hyperref}        % makes things clickable
 \usepackage{apacite}                    % bib style - APA
 \usepackage{natbib}                     % bib support for APA
