--- a/document.tex
+++ b/document.tex
@@ -22,7 +22,7 @@
 %     \vspace{-16px}
 % }
 % \author{
-%     \normalsize{Lewis Wolstanholme}             % AUTHOR
+%     \normalsize{Lewis Wolstanholme}             % author
 % }
 
 \maketitle
