--- a/document.tex
+++ b/document.tex
@@ -1,28 +1,28 @@
 % ARTICLE PREAMBLE
 
-\title{
+\title{                                         % title
     \vspace{-36px}
-    \LaTeX~Template                             % title
+    \LaTeX~Template
 }
-\author{
-    \normalsize{Lewis Wolstanholme}             % author
+\author{                                        % author
+    \normalsize{Lewis Wolstanholme}
 }
-\date{
-    \getDate\today                              % date
+\date{                                          % date
+    \getDate\today
 }
 
 % JOURNAL PREAMBLE
 
-% \title{
+% \title{                                         % title
 %     \vspace{-36px}
-%     \LaTeX~Template                             % title
+%     \LaTeX~Template
 % }
-% \subtitle{
-%     \textit{\getDate\today}                     % subtitle
+% \subtitle{                                      % subtitle
+%     \textit{\getDate\today}
 %     \vspace{-16px}
 % }
-% \author{
-%     \normalsize{Lewis Wolstanholme}             % author
+% \author{                                        % author
+%     \normalsize{Lewis Wolstanholme}
 % }
 
 \maketitle
@@ -35,7 +35,7 @@
 
 Write some stuff\ldots
 
-%% Bibliography - this is compiled from bib.bib
+% Bibliography - this is compiled from bib.bib
 \pagebreak
 \bibliography{bib}
 \bibliographystyle{apacite}
