custom \maketitle styles and a more simplified document.tex

--- a/document.tex
+++ b/document.tex
@@ -1,29 +1,13 @@
 % ARTICLE PREAMBLE
 
-\title{                                         % title
-    \vspace{-36px}
-    \LaTeX~Template
-}
-\author{                                        % author
-    \normalsize{Lewis Wolstanholme}
-}
-\date{                                          % date
-    \getDate\today
-}
+% \title{\LaTeX~Template}
+% \author{Lewis Wolstanholme}
+% \date{\getDate\today}
 
 % JOURNAL PREAMBLE
-
-% \title{                                         % title
-%     \vspace{-36px}
-%     \LaTeX~Template
-% }
-% \subtitle{                                      % subtitle
-%     \textit{\getDate\today}
-%     \vspace{-16px}
-% }
-% \author{                                        % author
-%     \normalsize{Lewis Wolstanholme}
-% }
+\title{\LaTeX~Template}
+\subtitle{\getDate\today}
+\author{Lewis Wolstanholme}
 
 \maketitle
 
