--- a/index.tex
+++ b/index.tex
@@ -1,5 +1,5 @@
-\documentclass[a4paper, 11pt]{article}
-% \documentclass[a4paper, 11pt]{journal}  
+% \documentclass[a4paper, 11pt]{article}
+\documentclass[a4paper, 11pt]{journal}  
 
 \input{template}
 
