--- a/document.tex
+++ b/document.tex
@@ -1,13 +1,13 @@
 % ARTICLE PREAMBLE
 
-% \title{\LaTeX~Template}
-% \author{Lewis Wolstanholme}
-% \date{\getDate\today}
+\title{\LaTeX~Template}
+\author{Lewis Wolstanholme}
+\date{\getDate\today}
 
 % JOURNAL PREAMBLE
-\title{\LaTeX~Template}
-\subtitle{\getDate\today}
-\author{Lewis Wolstanholme}
+% \title{\LaTeX~Template}
+% \subtitle{\getDate\today}
+% \author{Lewis Wolstanholme}
 
 \maketitle
 
