default code styles

--- a/template.tex
+++ b/template.tex
@@ -69,3 +69,6 @@
 % Format Date
 \newdateformat{getDate}{%
 \THEDAY~\monthname[\THEMONTH]~\THEYEAR}
+
+% Default Code Styles
+\setminted{obeytabs=true, tabsize=2}
