--- a/index.tex
+++ b/index.tex
@@ -1,8 +1,8 @@
-\documentclass[a4paper, 11pt]{article}
-% \documentclass[a4paper, 11pt]{journal}  
+% \documentclass[a4paper, 11pt]{article}
+\documentclass[a4paper, 11pt]{journal}  
 
 \input{template}
 
 \begin{document}
-    \include{document}
+	\include{document}
 \end{document}
