default font size for code

--- a/template.tex
+++ b/template.tex
@@ -71,4 +71,4 @@
 \THEDAY~\monthname[\THEMONTH]~\THEYEAR}
 
 % Default Code Styles
-\setminted{obeytabs=true, tabsize=2}
+\setminted{obeytabs=true, tabsize=2, fontsize=\small}
