started the title

--- a/index.tex
+++ b/index.tex
@@ -1,8 +1,16 @@
-\documentclass[a4paper, 11pt]{article}
-% \documentclass[a4paper, 11pt]{journal}  
+% \documentclass[a4paper, 11pt]{article}
+% \documentclass[a4paper, 11pt]{journal}
+\documentclass[a4paper, 11pt]{report}
+% \pagenumbering{roman}
 
 \input{template}
 
 \begin{document}
+	% REPORT PREAMBLE
+	\title{\LaTeX~Template}
+	\author{Lewis Wolstanholme}
+	\date{\getDate\today}
+	\maketitle
+
 	\include{document}
 \end{document}
