--- a/index.tex
+++ b/index.tex
@@ -6,16 +6,16 @@
 
 \begin{document}
 	% REPORT PREAMBLE
-	\title{This is an imaginary, really long, stupidly worded, but incredibly useful, title}
+	\title{\LaTeX~Template}
 	\author{Lewis Wolstanholme}
 	\project{PhD Thesis}
 	\institution{School of Electronic Engineering and Computer Science \\ Queen Mary University of London}
 	\date{\getDate\today}
 	\maketitle
+	\pagenumbering{roman}
 	% \begin{abstract}
 	% 	\ldots
 	% \end{abstract}
-	\pagenumbering{roman}
 	\tableofcontents
 	% \pagenumbering{alpha}
 
