--- a/template.tex
+++ b/template.tex
@@ -56,30 +56,30 @@
 		\newcommand*{\institution}[1]{\gdef\@institution{%
 			#1
 		}}
-		\renewcommand{\maketitle}{
+		\renewcommand*{\maketitle}{
 			\thispagestyle{empty}
 			\setcounter{page}{0}
 			\definecolor{bg}{RGB}{34, 31, 32}
 			\pagecolor{bg}
 			\color{white}
 			\begin{center}
-				\phantom{.}
-				\vspace{2cm}
-				
+				\renewcommand*{\baselinestretch}{1.2}
+				\phantom{.} \par
+				\vspace*{\fill}
 				{\Huge \bf \@title \par}
-				\vspace{2.5cm}
-
-				{\LARGE \@author \par}
-				\vspace{2.5cm}
-
-
+				\vspace{1cm}
+				{\LARGE \it \@author \par}
+				\vspace{3cm}
+				\vspace*{\fill}
+				\includegraphics[height=70pt]{./images/logo-white.png} \par
+				\vspace*{\fill}
+				\vspace{3cm}
 				{\Large \@institution \par}
-				\vspace{2.5cm}
-
+				\vspace{1cm}
 				{\@project\par}
-				\vspace{2.5cm}
-
-				{\normalsize\@date}
+				\vspace{1cm}
+				{\small\@date}
+				\vspace*{\fill}
 			\end{center}
 			\cleardoublepage
 			\pagecolor{white}
