fixed bug with journal

--- a/document.tex
+++ b/document.tex
@@ -21,3 +21,4 @@ Write some stuff\ldots
 % Bibliography - this is compiled from bib.bib
 \pagebreak
 \bibliography{bib}
+\bibliographystyle{apacite}
