--- a/index.tex
+++ b/index.tex
@@ -8,8 +8,8 @@
 	% REPORT PREAMBLE
 	\title{\LaTeX~Template}
 	\author{Lewis Wolstanholme}
-	\project{PhD Thesis}
 	\institution{School of Electronic Engineering and Computer Science \\ Queen Mary University of London}
+	\project{PhD Thesis}
 	\date{\getDate\today}
 	\maketitle
 	\pagenumbering{roman}
@@ -17,7 +17,8 @@
 	% 	\ldots
 	% \end{abstract}
 	\tableofcontents
-	% \pagenumbering{alpha}
+	\newpage
+	\pagenumbering{arabic}
 
 	% uncomment this to use citations
 	\nocite{*}
