--- a/template.tex
+++ b/template.tex
@@ -13,7 +13,8 @@
 \usepackage{xcolor}						% change font color with \textcolor{color}{text}
 \usepackage{pdfpages}					% include pdfs with \includepdf{link}
 \usepackage{float}						% support for better figure placement
-\usepackage{enumitem}					% support for better \begin{enumerate} 
+\usepackage{enumitem}					% support for better \begin{enumerate}
+\usepackage{titlesec}					% chapter title formatting
 \usepackage{lipsum}						% lorem ipsum \lipsum[seed]
 \usepackage{datetime}					% time itself
 
@@ -117,8 +118,14 @@
 \newdateformat{getDate}{%
 \THEDAY~\monthname[\THEMONTH]~\THEYEAR}
 
+% Format Chapter Headings
+\titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter{ }}{0pt}{\Huge\bf}
+
 % Default Code Styles
 \setminted{obeytabs=true, tabsize=2, fontsize=\small}
 
 % Bib Style
-\AtBeginDocument{\renewcommand{\APACrefYearMonthDay}[3]{\BBOP{#1}\BBCP}}
+\AtBeginDocument{%
+	\renewcommand{\APACrefYearMonthDay}[3]{\BBOP{#1}\BBCP}
+	\setcounter{chapter}{-1}
+}
