--- a/document.tex
+++ b/document.tex
@@ -11,14 +11,7 @@
 % \maketitle
 
 % \begin{abstract}
-% 	\ldots
+% 	stuff \ldots
 % \end{abstract}
 
-\section*{Introduction}
-
 Write some stuff\ldots
-
-% Bibliography - this is compiled from bib.bib
-\pagebreak
-\bibliography{bib}
-\bibliographystyle{apacite}
