added references to contents page

--- a/index.tex
+++ b/index.tex
@@ -20,13 +20,15 @@
 	\newpage
 	\pagenumbering{arabic}
 
-
 	\include{document}
 
 	% this stops the compiler throwing errors
 	\nocite{*}
+	
 	% Bibliography - this is compiled from bib.bib
-	\newpage
+	\cleardoublepage
+	\phantomsection
+	\addcontentsline{toc}{chapter}{References}
 	\bibliography{bib}
 	\bibliographystyle{apacite}
 \end{document}
