--- a/template.tex
+++ b/template.tex
@@ -1,6 +1,8 @@
 % spell-checker: disable
 % spellchecker: disable
 \usepackage[top=2cm, bottom=2cm, left=2cm, right=2cm]{geometry}
+\usepackage[T1]{fontenc}				% font encoding
+\usepackage{lmodern}					% default font
 \usepackage[utf8]{inputenc}			 	% ASCII encoding
 \usepackage{amssymb}					% maths
 \usepackage{mathtools}				  	% maths
