stripped document.tex and improved index.tex

--- a/document.tex
+++ b/document.tex
@@ -1,17 +1,1 @@
-% ARTICLE PREAMBLE
-% \title{\LaTeX~Template}
-% \author{Lewis Wolstanholme}
-% \date{\getDate\today}
-% \maketitle
-
-% JOURNAL PREAMBLE
-% \title{\LaTeX~Template}
-% \subtitle{\getDate\today}
-% \author{Lewis Wolstanholme}
-% \maketitle
-
-% \begin{abstract}
-% 	stuff \ldots
-% \end{abstract}
-
-Write some stuff\ldots
+\noindent Write some stuff \dots
