--- a/index.tex
+++ b/index.tex
@@ -1,30 +1,40 @@
-% \documentclass[a4paper, 11pt]{article}
+\documentclass[a4paper, 11pt]{article}
 % \documentclass[a4paper, 11pt]{journal}
-\documentclass[a4paper, 11pt]{report}
+% \documentclass[a4paper, 11pt]{report}
 
 \input{template}
 
 \begin{document}
-	% REPORT PREAMBLE
+	% ARTICLE PREAMBLE
 	\title{\LaTeX~Template}
 	\author{Lewis Wolstanholme}
-	\institution{School of Electronic Engineering and Computer Science \\ Queen Mary University of London}
-	\project{PhD Thesis}
 	\date{\getDate\today}
 	\maketitle
-	\pagenumbering{roman}
-	\begin{abstract}
-		\lipsum[1]\ldots
-	\end{abstract}
-	\tableofcontents
-	\newpage
-	\pagenumbering{arabic}
+
+	% JOURNAL PREAMBLE
+	% \title{\LaTeX~Template}
+	% \subtitle{\getDate\today}
+	% \author{Lewis Wolstanholme}
+	% \maketitle
+
+	% REPORT PREAMBLE
+	% \title{\LaTeX~Template}
+	% \author{Lewis Wolstanholme}
+	% \institution{School of Electronic Engineering and Computer Science \\ Queen Mary University of London}
+	% \project{PhD Thesis}
+	% \date{\getDate\today}
+	% \maketitle
+	% \pagenumbering{roman}
+	% \begin{abstract}
+	% 	\dots
+	% \end{abstract}
+	% \tableofcontents
+	% \newpage
+	% \pagenumbering{arabic}
+	% \setcounter{chapter}{-1}
 
 	\include{document}
 
-	% this stops the compiler throwing errors
-	\nocite{*}
-	
 	% Bibliography - this is compiled from bib.bib
 	\cleardoublepage
 	\phantomsection
