fixed some chktex errors

--- a/index.tex
+++ b/index.tex
@@ -24,8 +24,8 @@
 	\include{document}
 
 	% Bibliography - this is compiled from bib.bib
-	\cleardoublepage
-	\phantomsection
+	\cleardoublepage{}
+	\phantomsection{}
 	\addcontentsline{toc}{chapter}{References}
 	\bibliography{bib}
 	\bibliographystyle{apacite}
