--- a/template.tex
+++ b/template.tex
@@ -84,7 +84,7 @@
 				{\small\@date}
 				\vspace*{\fill}
 			\end{center}
-			\cleardoublepage
+			\cleardoublepage{}
 			\pagecolor{white}
 			\color{black}
 		}
