--- a/index.tex
+++ b/index.tex
@@ -23,6 +23,10 @@
 
 	\include{document}
 
+	% \begin{appendix}
+	% 	\dots
+	% \end{appendix}
+
 	% Bibliography - this is compiled from bib.bib
 	\cleardoublepage{}
 	\phantomsection{}
