--- a/template.tex
+++ b/template.tex
@@ -112,14 +112,13 @@
 
 	% Appendix Styles
 	\@ifclassloaded{report}{%
-			\renewenvironment{appendix}{%
-				\renewcommand*{\thechapter}{\Alph{chapter}}
-				\setcounter{chapter}{0}
-				\setcounter{section}{0}
-				\chapter*{Appendix}
-				\addcontentsline{toc}{chapter}{Appendix}
-				\setcounter{chapter}{1}
-			}{}
+		\renewenvironment{appendix}{%
+			\renewcommand*{\thechapter}{\Alph{chapter}}
+			\renewcommand*{\thesection}{A.\arabic{section}}
+			\setcounter{chapter}{0}
+			\chapter*{Appendix}
+			\addcontentsline{toc}{chapter}{Appendix}
+		}{}
 	}
 \makeatother
 
