added declarations for argmin and argmax

--- a/template.tex
+++ b/template.tex
@@ -140,3 +140,7 @@
 	% Bib Style
 	\renewcommand{\APACrefYearMonthDay}[3]{\BBOP{#1}\BBCP}
 }
+
+% Math Operators
+\DeclareMathOperator*{\argmax}{argmax}
+\DeclareMathOperator*{\argmin}{argmin}
