--- a/template.tex
+++ b/template.tex
@@ -36,7 +36,7 @@
 	}{}
 
 	% Title Style for Journal
-	\@ifclassloaded{journal}{
+	\@ifclassloaded{journal}{%
 		\renewcommand*{\title}[1]{\gdef\@title{%
 			\vspace{-40px}
 			\hspace{-7px} % dno why?
