font and input support for extra languages

--- a/template.tex
+++ b/template.tex
@@ -1,9 +1,10 @@
 % spell-checker: disable
 % spellchecker: disable
 \usepackage[top=2cm, bottom=2cm, left=2cm, right=2cm]{geometry}
+\usepackage[utf8]{inputenc}			 	% ASCII encoding
+\usepackage[english]{babel}				% use this to add extra languages
 \usepackage[T1]{fontenc}				% font encoding
 \usepackage{lmodern}					% default font
-\usepackage[utf8]{inputenc}			 	% ASCII encoding
 \usepackage{amssymb}					% maths
 \usepackage{mathtools}				  	% maths
 \usepackage[none]{hyphenat}			 	% less word breaks more kerning
