--- a/template.tex
+++ b/template.tex
@@ -7,6 +7,7 @@
 \usepackage{lmodern}					% default font
 \usepackage{amssymb}					% maths
 \usepackage{mathtools}					% maths
+\usepackage{musicography}				% simple music symbols
 \usepackage[none]{hyphenat}				% less word breaks more kerning
 \usepackage{prettyref}					% label and reference autoformatting
 \usepackage[hidelinks]{hyperref}		% makes things clickable
