added prettyref for figure

--- a/template.tex
+++ b/template.tex
@@ -209,6 +209,7 @@
 
 % Label and Reference Stylings
 \newrefformat{chapter}{\hyperref[{#1}]{chapter~\ref*{#1}}}
+\newrefformat{figure}{\hyperref[{#1}]{figure~\ref*{#1}}}
 \newrefformat{section}{\hyperref[{#1}]{section~\ref*{#1}}}
 
 % Default Code Styles
