--- a/template.tex
+++ b/template.tex
@@ -18,6 +18,7 @@
 \usepackage{xcolor}						% change font color with \textcolor{color}{text}
 \usepackage{pdfpages}					% include pdfs with \includepdf{link}
 \usepackage{float}						% support for better figure placement
+\usepackage{subcaption}					% abaility to add subfigures (fig 1a, 1b, etc.)
 \usepackage{enumitem}					% support for better \begin{enumerate}
 \usepackage{titlesec}					% chapter title formatting
 \usepackage{lipsum}						% lorem ipsum \lipsum[seed]
