--- a/template.tex
+++ b/template.tex
@@ -12,7 +12,7 @@
 \usepackage{prettyref}					% label and reference autoformatting
 \usepackage[hidelinks]{hyperref}		% makes things clickable
 \usepackage[nodoi]{apacite}				% bib style - APA
-\usepackage{natbib}						% bib support for APA
+\usepackage[sort&compress]{natbib}		% bib support for APA
 \usepackage{minted}						% syntax highlighting
 \usepackage{graphicx}					% import images with \includegraphics{filepath}
 \usepackage{xcolor}						% change font color with \textcolor{color}{text}
@@ -202,8 +202,7 @@
 \pagestyle{plain}
 
 % Format Date
-\newdateformat{getDate}{%
-\THEDAY~\monthname[\THEMONTH]~\THEYEAR}
+\newdateformat{getDate}{\THEDAY~\monthname[\THEMONTH]~\THEYEAR}
 
 % Format Chapter Headings
 \titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter{ }}{0pt}{\Huge\bf}
@@ -221,9 +220,8 @@
 \DeclareMathOperator*{\argmin}{argmin}
 
 % Default Figure Styles
+% https://tex.stackexchange.com/questions/140568/how-to-set-default-positioning-of-figure-table-document-wide
 \makeatletter%
-	% Command for Figure and Table styles.
-	% https://tex.stackexchange.com/questions/140568/how-to-set-default-positioning-of-figure-table-document-wide
 	\providecommand*\setfloatlocations[2]{\@namedef{fps@#1}{#2}}
 \makeatother
 \setfloatlocations{figure}{H}
