removed citation error when no citations were present

--- a/template.tex
+++ b/template.tex
@@ -230,6 +230,7 @@
 	% Bibliography Styles
 	\bibliographystyle{apacite}
 	\renewcommand{\APACrefYearMonthDay}[3]{\BBOP{#1}\BBCP}
+	\nocite{*}
 	% Handle Word Breaks
 	\sloppy
 	% Set PDF Metadata
