--- a/index.tex
+++ b/index.tex
@@ -2,7 +2,7 @@
 % \documentclass[a4paper, 11pt]{journal}
 % \documentclass[a4paper, 11pt]{report}
 
-\input{template}
+\input{style/template}
 
 \begin{document}
 	% REPORT PREAMBLE
