use greek characters outside of math mode

--- a/style/template.tex
+++ b/style/template.tex
@@ -7,6 +7,7 @@
 \usepackage{lmodern}					% default font
 \usepackage{amssymb}					% maths
 \usepackage{mathtools}					% maths
+\usepackage[euler]{textgreek}			% use greek characters outside of math mode
 \usepackage{musicography}				% simple music symbols
 \usepackage[none]{hyphenat}				% less word breaks more kerning
 \usepackage{prettyref}					% label and reference autoformatting
