cleaned up root dir

--- a/style/template.tex
+++ b/style/template.tex
@@ -141,7 +141,7 @@
 				{\LARGE \it \@author \par}
 				\vspace{3cm}
 				\vspace*{\fill}
-				\includegraphics[height=70pt]{./images/logo-white.png} \par
+				\includegraphics[height=70pt]{./style/images/logo-white.png} \par
 				\vspace*{\fill}
 				\vspace{3cm}
 				{\Large \@institution \par}
