added ceil floor and round math functions

--- a/style/template.tex
+++ b/style/template.tex
@@ -246,6 +246,9 @@
 % Math Operators
 \DeclareMathOperator*{\argmax}{argmax}
 \DeclareMathOperator*{\argmin}{argmin}
+\DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
+\DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
+\DeclarePairedDelimiter{\round}{\lfloor}{\rceil}
 
 % Default Figure Styles
 % https://tex.stackexchange.com/questions/140568/how-to-set-default-positioning-of-figure-table-document-wide
